Re-fix align-vertically centering issue

--- a/static/css/section/_local.scss
+++ b/static/css/section/_local.scss
@@ -1648,7 +1648,7 @@ button.button--primary__deactivated:hover {
 
 // Override the "align-items: center" from equal-height__align-vertically,
 // which makes all items appear horizontally centered
-.equal-height > .equal-height__horizontal-left {
+.equal-height > .equal-height__align-vertically {
   align-items: stretch;
 }
 
